# Predict_Tool

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
app/: constant.py  detect.py  routine.py  state.py  utils.py  web.py
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.vue
gui/src/components/: Input.vue  Screen.vue
